# ExtractFieldUsage

./: CMakeLists.txt  README.md  run_field_usage.sh
src/: compare_usages.cpp  extract_struct_fields.cpp  field_usage_checker.cpp  field_usage_checker.cpp.bak
